--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,7 +5,7 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     height: 100%;
-    background: green;
+    background: #ECF0F3;
   }
   .card {
     margin-bottom: 3rem;
